Update Veri Analizi -Final.ipynb

--- a/Veri Analizi -Final.ipynb
+++ b/Veri Analizi -Final.ipynb
@@ -1181,7 +1181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Covid-19 Verilerinin Çekilmesi (Kaynak: Rice University-Github)"
+    "# Covid-19 Verilerinin Çekilmesi (Kaynak: John Hopkins University - Github)"
    ]
   },
   {
